--- a/jp.html
+++ b/jp.html
@@ -1,131 +1,80 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="en">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>日语学习卡 - 多分类</title>
+<title>Vocabulary Page</title>
 <script src="https://cdn.tailwindcss.com"></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-<style>
-  .animal-card {
-    transition: all 0.3s ease;
-  }
-  .animal-card:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1);
-  }
-  .speaker-icon {
-    transition: all 0.2s ease;
-  }
-  .animal-card:hover .speaker-icon {
-    color: #3b82f6;
-  }
-  .source-label {
-    font-size: 12px;
-    color: #888;
-    margin-top: 4px;
-  }
-  img.lazy {
-    filter: blur(2px);
-    transition: filter 0.3s;
-  }
-  img.lazy.loaded {
-    filter: blur(0);
-  }
-</style>
 </head>
-<body class="bg-gradient-to-br from-blue-50 to-purple-50 min-h-screen">
-<div class="container mx-auto px-4 py-8">
-
-  <header class="text-center mb-6">
-    <h1 class="text-4xl font-bold text-indigo-700 mb-2">日语学习卡</h1>
-    <p class="text-gray-600">点击图标学习日语发音</p>
-  </header>
-
-  <div id="categoryContainer"></div>
-</div>
-
-<footer class="text-center py-6 text-gray-500 text-sm">
-  <p>© 2025 日语学习工具</p>
-</footer>
+<body class="bg-gray-100 p-4">
+<h1 class="text-3xl font-bold mb-6 text-center">Vocabulary</h1>
+<div id="categories" class="grid gap-8"></div>
 
 <script>
-const PLACEHOLDER = "https://via.placeholder.com/96x96?text=图标";
-
-// 读取 JSON 并渲染
-async function loadCategories() {
-  const res = await fetch('categories.json');
-  const categories = await res.json();
-  const container = document.getElementById('categoryContainer');
-  container.innerHTML = '';
-
-  for (let [cat, items] of Object.entries(categories)) {
-    const section = document.createElement('section');
-    section.className = 'mb-10';
-    section.innerHTML = `<h2 class="text-2xl font-bold mb-4 text-indigo-700">${cat}</h2>
-      <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-6"></div>`;
-    const grid = section.querySelector('div');
-
-    for (let item of items) {
-      const card = document.createElement('div');
-      card.className = 'animal-card bg-white rounded-xl overflow-hidden shadow-md cursor-pointer text-center p-4';
-      card.innerHTML = `
-        <img data-src="${item.iconSources[0]}" src="${PLACEHOLDER}" alt="${item.name}" class="mx-auto h-24 w-24 mb-2 lazy">
-        <h3 class="font-semibold text-lg text-gray-800">${item.name}</h3>
-        <p class="text-indigo-600 mt-1">${item.japanese}</p>
-        <div class="speaker-icon mt-2"><i class="fas fa-volume-up text-gray-400"></i></div>
-        <div class="source-label">来源: ${item.iconSources[0]}</div>
-      `;
-      card.addEventListener('click', () => speakJapanese(item.japanese));
-      grid.appendChild(card);
-    }
-    container.appendChild(section);
-  }
-
-  lazyLoadImages();
+// 发音函数
+function speak(text) {
+    const utter = new SpeechSynthesisUtterance(text);
+    utter.lang = 'en-US';
+    speechSynthesis.speak(utter);
 }
 
-// 点击发音
-function speakJapanese(text) {
-  const utterance = new SpeechSynthesisUtterance();
-  utterance.text = text;
-  utterance.lang = 'ja-JP';
-  utterance.rate = 0.8;
-  speechSynthesis.speak(utterance);
+// 尝试加载图片，多图源轮询
+function loadImage(sources, imgEl, index = 0) {
+    if (index >= sources.length) return;
+    const url = `https://source.unsplash.com/160x160/?${sources[index]}`;
+    const img = new Image();
+    img.src = url;
+    img.onload = () => imgEl.src = url;
+    img.onerror = () => loadImage(sources, imgEl, index + 1);
 }
 
-// 延迟加载图片 + 多源备选
-function lazyLoadImages() {
-  const imgs = document.querySelectorAll('img.lazy');
-  imgs.forEach(img => {
-    const sources = [img.dataset.src]; // 可以扩展成多个备用 URL
-    let index = 0;
+// 渲染 JSON 数据
+fetch('categories.json')
+.then(res => res.json())
+.then(data => {
+    const container = document.getElementById('categories');
+    Object.keys(data).forEach(category => {
+        const catDiv = document.createElement('div');
+        catDiv.className = "bg-white p-4 rounded shadow";
+        const catTitle = document.createElement('h2');
+        catTitle.textContent = category;
+        catTitle.className = "text-2xl font-semibold mb-4";
+        catDiv.appendChild(catTitle);
 
-    function tryLoad() {
-      img.src = sources[index] || PLACEHOLDER;
-    }
-    img.onload = () => { img.classList.add('loaded'); };
-    img.onerror = () => {
-      index++;
-      if (index < sources.length) tryLoad();
-      else img.src = PLACEHOLDER;
-    };
+        const grid = document.createElement('div');
+        grid.className = "grid grid-cols-2 sm:grid-cols-3 md:grid-cols-5 gap-4";
 
-    // 使用 IntersectionObserver 延迟加载
-    const observer = new IntersectionObserver(entries => {
-      entries.forEach(entry => {
-        if (entry.isIntersecting) {
-          tryLoad();
-          observer.unobserve(img);
-        }
-      });
-    }, { threshold: 0.1 });
-    observer.observe(img);
-  });
-}
+        data[category].forEach(item => {
+            const card = document.createElement('div');
+            card.className = "bg-gray-50 p-2 rounded text-center cursor-pointer hover:shadow-lg transition";
 
-// 初始化
-loadCategories();
+            // 图片
+            const img = document.createElement('img');
+            img.className = "mx-auto mb-2 w-24 h-24 object-cover rounded";
+            img.loading = "lazy";
+            loadImage(item.iconSources, img);
+
+            // 英文
+            const eng = document.createElement('div');
+            eng.textContent = item.english;
+            eng.className = "font-medium";
+            eng.onclick = () => speak(item.english);
+
+            // 日文
+            const jp = document.createElement('div');
+            jp.textContent = item.japanese;
+            jp.className = "text-gray-600";
+
+            card.appendChild(img);
+            card.appendChild(eng);
+            card.appendChild(jp);
+            grid.appendChild(card);
+        });
+
+        catDiv.appendChild(grid);
+        container.appendChild(catDiv);
+    });
+});
 </script>
 </body>
 </html>
